blog update sprint 2

--- a/index.html
+++ b/index.html
@@ -79,6 +79,10 @@
                         <img class="img-fluid" id="pro-link" src="img/Screenshot 2024-04-09 at 4.23.38 PM.png"></a>
                         <p id="par" class="pt-5">This project was based off a wireframe made by a designer that we replicated using bootstrap. We worked with HTML, Bootstrap, CSS, and JavaScript to make this page read your mind.</p>
                         </div>
+                        <div class="text-center pt-5 mb-5" id="pro-link"><a href="https://kumarg23.github.io/mind-reader/" target="_blank" style="text-decoration: none;">
+                            <img class="img-fluid" id="pro-link" src="img/alarm-clock.png"></a>
+                            <p id="par" class="pt-5">This project was was my first time really working with JavaScript. It was a great learning experience and I greatly enjoyed working with the CSS. I learned about JavaScript, more about animations with CSS, and HTML.<p>
+                        </div>
                         
 
 
