--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
                     <div id="left-side" class="sticky-md-top justify-content-center text-center">
                         <h1 class="fs-1 fw-bold d-flex justify-content-center" id="info">Neal Sharma</h1>
                         <h2 class="mt-3 mb-3 fs-2 fw-bold" id="info">Web Developer</h2>
-                        <img src="../KumarG23.github.io.kumarBlog/img/kumar-profile.png" id="pic">
+                        <img src="img/kumar-profile.png" id="pic">
                         <p class="mt-5 fs-5" id="info">I build beautiful and creative web apps</p>
                         <nav class="nav d-flex justify-content-center text-center">
                             <ul class="fs-5 list-unstyled ">
