--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                                     <a class="btn w-100 mt-3 fw-bold" id="icon" href="#projects">Projects</a>
                                 </li>
                                 <li>
-                                    <a class="btn w-100 mt-3 fw-bold" id="icon" href="https://kumarg23.github.io/kumarBlog/" target="_blank">Blog</a>
+                                    <a class="btn w-100 mt-3 fw-bold" id="icon" href="https://kumarg23.github.io/Awesome-Blog/" target="_blank">Blog</a>
                                 </li>
                             </ul>
                         </nav>
