added image and section

--- a/index.html
+++ b/index.html
@@ -83,6 +83,11 @@
                             <img class="img-fluid" id="pro-link" src="img/alarm-clock.png"></a>
                             <p id="par" class="pt-5">This project was was my first time really working with JavaScript. It was a great learning experience and I greatly enjoyed working with the CSS. I learned about JavaScript, more about animations with CSS, and HTML.<p>
                         </div>
+
+                        <div class="text-center pt-5 mb-5" id="pro-link"><a href="https://kumarg23.github.io/weather-app/" target="_blank" style="text-decoration: none;">
+                            <img class="img-fluid" id="pro-link" src="img/weather-app-pic.png"></a>
+                            <p id="par" class="pt-5">This project I wanted to do as much JavaScript as I could to challenge myself. This project was again us replicating a wire frame provided to us by our instructors. I felt like I earned a bit more knowledge by challenging myself to work with JavaScript, which at the moment im not super comfortable with, and it paid off.<p>
+                        </div>
                         
 
 
