--- a/index.html
+++ b/index.html
@@ -7,6 +7,14 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link href="style.css" rel="stylesheet">
     <script src="https://kit.fontawesome.com/fb13d8ca05.js" crossorigin="anonymous"></script>
+    <style>
+        #info {
+            font-size: 1rem; /* Adjust this value to make the text smaller */
+            font-weight: bold;
+            display: flex;
+            justify-content: center;
+        }
+    </style>
 </head>
 <body>
     <div id="container" class="d-flex flex-column flex-md-row">
