--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
                         <img class="img-fluid" id="pro-link" src="img/Screenshot 2024-04-09 at 4.23.38 PM.png"></a>
                         <p id="par" class="pt-5">This project was based off a wireframe made by a designer that we replicated using bootstrap. We worked with HTML, Bootstrap, CSS, and JavaScript to make this page read your mind.</p>
                         </div>
-                        <div class="text-center pt-5 mb-5" id="pro-link"><a href="https://kumarg23.github.io/mind-reader/" target="_blank" style="text-decoration: none;">
+                        <div class="text-center pt-5 mb-5" id="pro-link"><a href="https://kumarg23.github.io/alarm-clock/" target="_blank" style="text-decoration: none;">
                             <img class="img-fluid" id="pro-link" src="img/alarm-clock.png"></a>
                             <p id="par" class="pt-5">This project was was my first time really working with JavaScript. It was a great learning experience and I greatly enjoyed working with the CSS. I learned about JavaScript, more about animations with CSS, and HTML.<p>
                         </div>
@@ -94,6 +94,14 @@
                         <div class="text-center pt-5 mb-5" id="pro-link"><a href="https://kumarg23.github.io/weather-app/" target="_blank" style="text-decoration: none;">
                             <img class="img-fluid" id="pro-link" src="img/weather-app-pic.png"></a>
                             <p id="par" class="pt-5">This project I wanted to do as much JavaScript as I could to challenge myself. This project was again us replicating a wire frame provided to us by our instructors. I felt like I earned a bit more knowledge by challenging myself to work with JavaScript, which at the moment im not super comfortable with, and it paid off.<p>
+                        </div>
+                        <div class="text-center pt-5 mb-5" id="pro-link"><a href="https://kumarg23.github.io/random-restaurant/" target="_blank" style="text-decoration: none;">
+                            <img class="img-fluid" id="pro-link" src="img/restaurant.png"></a>
+                            <p id="par" class="pt-5">This project has to be one of my favorites. I made a space themed restaurant site using react and an api to populate the menu. It's a really fun one that shows the joy I find in being creative.<p>
+                        </div>
+                        <div class="text-center pt-5 mb-5" id="pro-link"><a href="https://nepali-threads.vercel.app/" target="_blank" style="text-decoration: none;">
+                            <img class="img-fluid" id="pro-link" src="img/nepali.png"></a>
+                            <p id="par" class="pt-5">This project has to be one of my favorites. I made a space themed restaurant site using react and an api to populate the menu. It's a really fun one that shows the joy I find in being creative.<p>
                         </div>
                         
 
