--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
 
                         <p class="fst-italic fs-4" id="par">
                             2013 Business Owner
-                            <p id="par">I owned a small gas station/restaurant/pool hall for over 3 years. This experience was incredible. I learned the inner workings of a business. I learned the hard work and just pure hours that many business owners have to put in to find their success. I had not had any experience running a business prior to this. It was so much to learn but I am very glad I did it. I learned payroll, hiring, sales, pricing, customer service, worked with vendors, and so many more things that the list would be endless. Huge learning experience for me overall.</p>
+                            <p id="par">I owned a small gas station/restaurant/pool hall for over 3 years. This experience was incredible. I learned the inner workings of a business. I learned the hard work and just pure hours that many business owners have to put in to find their success. I had not had any experience running a business prior to this. It was so much to learn but I am very glad I did it. I learned payroll, hiring, sales, pricing, customer service, worked with vendors, and so much more that the list would be endless. Huge learning experience for me overall.</p>
                         </p>
 
                         <p class="fst-italic fs-4" id="par">
