--- a/index.html
+++ b/index.html
@@ -48,6 +48,7 @@
                         <li class="mr-3 mb-0 ms-2"><a href="https://www.goodreads.com/user/show/124681580-neal-sharma" target="_blank" id="icon"><i class="fab fa-goodreads"></i></a></li>
                         <li class="mr-3 mb-0 ms-2"><a href="https://twitter.com/KumarG2369" target="_blank" id="icon"><i class="fa-brands fa-x-twitter"></i></a></li>
                         <li class="mr-3 mb-0 ms-2"><a href="https://www.instagram.com/nealkushmarma/" target="_blank" id="icon"><i class="fa-brands fa-instagram"></i></a></li>
+                        <li class="mr-3 mb-0 ms-2"><a href="mailto:sharma.neal@yahoo.com" id="icon"><i class="fa fa-envelope"></i></a></li>
                     </ul>
                     </div>
                     </div>
